gitops/kustomize/zookeeper/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-zookeeper-zookeeper-headless
  labels:
    zookeeper.example.io/service: headless
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: client
      port: 2181
      targetPort: client
      protocol: TCP
    - name: quorum
      port: 2888
      targetPort: quorum
      protocol: TCP
    - name: leader-election
      port: 3888
      targetPort: leader-election
      protocol: TCP
    - name: metrics
      port: 7000
      targetPort: metrics
      protocol: TCP
  selector:
    app.kubernetes.io/name: zookeeper
---
apiVersion: v1
kind: Service
metadata:
  name: shared-zookeeper-zookeeper-client
  labels:
    zookeeper.example.io/service: client
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "7000"
    prometheus.io/path: /metrics
spec:
  type: ClusterIP
  ports:
    - name: client
      port: 2181
      targetPort: client
      protocol: TCP
  selector:
    app.kubernetes.io/name: zookeeper
