gitops/kustomize/zookeeper/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shared-zookeeper-zookeeper
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: zookeeper
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: zookeeper
      ports:
        - port: 2181
          protocol: TCP
        - port: 2888
          protocol: TCP
        - port: 3888
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              messaging.example.io/cluster: PLACEHOLDER_CLUSTER_NAME
          podSelector:
            matchExpressions:
              - key: ActiveMQArtemis
                operator: Exists
      ports:
        - port: 2181
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: PLACEHOLDER_MONITORING_NAMESPACE
          podSelector:
            matchLabels:
              app.kubernetes.io/part-of: monitoring
      ports:
        - port: 7000
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: zookeeper
      ports:
        - port: 2888
          protocol: TCP
        - port: 3888
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
